--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,11 @@ buildscript {
         kotlin_version = '1.3.72'
         moshi_version = '1.9.2'
         mockK_version = '1.10.0'
-        nav_version = '2.3.0'
+        nav_version = '2.3.1'
         okhttp_version = '4.3.1'
         retrofit_version = '2.7.1'
         threetenabp_version = '1.2.2'
+        paging_version = "3.0.0-alpha08"
     }
 
     repositories {
@@ -30,7 +31,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0-beta05'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
